<?xml version="1.0" encoding="utf-8"?>
<com.flyco.roundview.RoundLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    app:rv_backgroundColor="@color/theme_bg"
    app:rv_cornerRadius="16dp">

    <com.rate.quiz.widget.AppTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20dp"
        android:text="@string/version_upgrade"
        android:textColor="@color/theme_text_color"
        android:textSize="16sp" />

    <com.rate.quiz.widget.AppTextView
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Upgrade to the last version"
        android:textColor="@color/theme_text_color"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/bar_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/version_update_progress_bar_drawable"
        android:visibility="gone"
        tools:progress="30"
        tools:visibility="visible" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="18dp">

        <com.flyco.roundview.RoundTextView
            android:id="@+id/tv_option_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="14dp"
            android:text="@string/cancel"
            android:textColor="#000000"
            android:textSize="16sp"
            app:rv_backgroundColor="#f2f2f5"
            app:rv_cornerRadius="16dp" />

        <com.flyco.roundview.RoundTextView
            android:id="@+id/tv_option_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="14dp"
            android:text="@string/upgrade"
            android:textColor="#000000"
            android:textSize="16sp"
            app:rv_backgroundColor="#bbcdfa"
            app:rv_cornerRadius="16dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.flyco.roundview.RoundLinearLayout>