<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <View
        android:id="@+id/padding_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/home_task_list_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/padding_view" />

    <ImageView
        android:id="@+id/img_game"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_task_list_wheel"
        app:layout_constraintRight_toRightOf="@id/tv_game"
        app:layout_constraintTop_toTopOf="@+id/tv_game" />

    <TextView
        android:id="@+id/tv_game"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_pin_num"
        android:gravity="center"
        android:textColor="@color/theme_bg"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/padding_view"
        tools:text="99+"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:textColor="@color/task_list_item_chance"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_expire"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="@string/home_task_list_preview" />

    <TextView
        android:id="@+id/tv_expire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_progress"
        tools:drawableStartCompat="@drawable/ic_task_list_clock"
        tools:text="@string/home_task_list_time" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_task_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_progress"
        tools:listitem="@layout/adapter_task_list" />
</androidx.constraintlayout.widget.ConstraintLayout>